--- a/app/src/main/res/layout/activity_matchmaking.xml
+++ b/app/src/main/res/layout/activity_matchmaking.xml
@@ -16,10 +16,12 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttoncreatematch"
         style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
 
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/button"
         android:backgroundTint="#59FFFFFF"
         android:fontFamily="monospace"
