--- a/app/src/main/res/layout/activity_lancement_jeu2.xml
+++ b/app/src/main/res/layout/activity_lancement_jeu2.xml
@@ -11,7 +11,8 @@
         android:layout_width="322dp"
         android:layout_height="128dp"
         android:fontFamily="sans-serif"
-        android:text="Il faut désarmorcer la bombe avant qu'elle n'explose en coupant le bon fil. Tu n'as que XX secondes"
+        android:text="Il faut désamorcer la bombe en coupant le bon fil sans la faire exploser!"
+        android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,6 +28,7 @@
         android:layout_marginTop="112dp"
         android:fontFamily="sans-serif-smallcaps"
         android:text="Attention à l'explosion!"
+        android:textAlignment="center"
         android:textColor="#F44336"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
