--- a/app/src/main/res/layout/activity_ecran_fin.xml
+++ b/app/src/main/res/layout/activity_ecran_fin.xml
@@ -79,9 +79,9 @@
         android:elevation="1dp"
         android:fontFamily="sans-serif-thin"
         android:paddingTop="10px"
-        android:text="C'est parti !"
+        android:text="POG"
         android:textAlignment="center"
-        android:textColor="#FFCD17"
+        android:textColor="#68FF17"
         android:textSize="48sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
