--- a/app/src/main/res/layout/activity_cours.xml
+++ b/app/src/main/res/layout/activity_cours.xml
@@ -37,6 +37,7 @@
                 android:layout_weight="1"
                 android:background="#65FF0000"
                 android:backgroundTint="#FF0000"
+                android:fontFamily="@font/crysisb"
                 android:onClick="goto_addition"
                 android:text="addition"
                 android:textColor="@color/white" />
@@ -48,6 +49,7 @@
                 android:layout_margin="15dp"
                 android:layout_weight="1"
                 android:background="#66DFC0C0"
+                android:fontFamily="@font/gearsofpeace"
                 android:onClick="goto_soustraction"
                 android:text="soustraction"
                 android:textColor="@color/white"
@@ -70,6 +72,7 @@
                 android:layout_margin="15dp"
                 android:layout_weight="0.5"
                 android:background="#66FFFFFF"
+                android:fontFamily="@font/pdark"
                 android:onClick="goto_multiplication"
                 android:text="produit"
                 android:textColor="@color/white" />
@@ -81,6 +84,7 @@
                 android:layout_margin="15dp"
                 android:layout_weight="0.5"
                 android:background="#33FFFFFF"
+                android:fontFamily="@font/quantum"
                 android:onClick="goto_division"
                 android:text="division"
                 android:textColor="@color/white" />
@@ -101,6 +105,7 @@
                 android:layout_margin="15dp"
                 android:layout_weight="0.5"
                 android:background="#66FFFFFF"
+                android:fontFamily="@font/spaceage"
                 android:onClick="goto_factorielle"
                 android:text="factoriel"
                 android:textColor="@color/white" />
@@ -112,6 +117,7 @@
                 android:layout_margin="15dp"
                 android:layout_weight="0.5"
                 android:background="#66FFFFFF"
+                android:fontFamily="@font/spinc"
                 android:onClick="goto_puissance"
                 android:text="puissance"
                 android:textColor="@color/white" />
