changement fond matchmaking

--- a/app/src/main/res/layout/activity_matchmaking.xml
+++ b/app/src/main/res/layout/activity_matchmaking.xml
@@ -11,6 +11,7 @@
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
         app:srcCompat="@drawable/fondmulti" />
 
     <androidx.appcompat.widget.AppCompatButton
