--- a/app/src/main/res/layout/activity_fin_jeu2.xml
+++ b/app/src/main/res/layout/activity_fin_jeu2.xml
@@ -26,7 +26,7 @@
         android:layout_width="314dp"
         android:layout_height="192dp"
         android:layout_marginTop="72dp"
-        android:text="Oh non!"
+        android:text="Oh non! La bombe a explosé!"
         android:textAlignment="center"
         android:textSize="34sp"
         android:visibility="gone"
