Affichage du score à la fin du jeu 3 Variation du gain de temps selon la difficulté

--- a/app/src/main/res/layout/activity_fin_jeu3.xml
+++ b/app/src/main/res/layout/activity_fin_jeu3.xml
@@ -7,6 +7,17 @@
     tools:context=".FinJeu3Activity">
 
     <TextView
+        android:id="@+id/textscorefin3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="455dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/felicitation2"
         android:layout_width="324dp"
         android:layout_height="205dp"
