--- a/app/src/main/res/layout/activity_fin_jeu3.xml
+++ b/app/src/main/res/layout/activity_fin_jeu3.xml
@@ -49,6 +49,7 @@
         android:id="@+id/pouce_haut2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="#00FFFFFF"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,6 +101,7 @@
         android:id="@+id/pouce_bas3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
