--- a/app/src/main/res/layout/activity_division.xml
+++ b/app/src/main/res/layout/activity_division.xml
@@ -14,7 +14,7 @@
         android:layout_width="fill_parent"
         android:layout_height="45dp"
         android:background="#1777A5"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/gearsofpeace"
         android:gravity="center_horizontal"
         android:text="Division"
         android:textColor="#04061E"
