--- a/app/src/main/res/layout/activity_cours.xml
+++ b/app/src/main/res/layout/activity_cours.xml
@@ -40,10 +40,13 @@
                 android:layout_weight="1"
                 android:alpha="0.7"
                 android:background="@drawable/button"
+                android:fontFamily="@font/quantum"
+
                 android:onClick="goto_addition"
                 android:text="addition"
-
-                android:textColor="@color/colorText" />
+                android:textColor="@color/colorText"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/soustraction"
@@ -54,11 +57,13 @@
                 android:layout_weight="1"
                 android:alpha="0.7"
                 android:background="@drawable/button"
+                android:fontFamily="@font/quantum"
                 android:onClick="goto_soustraction"
                 android:text="soustraction"
-                android:textColor="@color/colorText"
 
-                android:textSize="12sp" />
+                android:textColor="@color/colorText"
+                android:textSize="17sp"
+                android:textStyle="bold" />
 
         </TableRow>
 
@@ -79,9 +84,12 @@
                 android:layout_weight="0.5"
                 android:alpha="0.7"
                 android:background="@drawable/button"
+                android:fontFamily="@font/quantum"
                 android:onClick="goto_multiplication"
                 android:text="produit"
-                android:textColor="@color/colorText"/>
+                android:textColor="@color/colorText"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
 
             <androidx.appcompat.widget.AppCompatButton
@@ -93,11 +101,13 @@
                 android:layout_weight="0.5"
                 android:alpha="0.7"
                 android:background="@drawable/button"
+                android:fontFamily="@font/quantum"
                 android:onClick="goto_division"
                 android:text="division"
-                android:textColor="@color/colorText"
 
-                />
+                android:textColor="@color/colorText"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </TableRow>
 
         <TableRow
@@ -117,11 +127,13 @@
                 android:layout_weight="0.5"
                 android:alpha="0.7"
                 android:background="@drawable/button"
+                android:fontFamily="@font/quantum"
                 android:onClick="goto_factorielle"
                 android:text="factoriel"
-                android:textColor="@color/colorText"
 
-                />
+                android:textColor="@color/colorText"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/puissance"
@@ -132,9 +144,12 @@
                 android:layout_weight="0.5"
                 android:alpha="0.7"
                 android:background="@drawable/button"
+                android:fontFamily="@font/quantum"
                 android:onClick="goto_puissance"
                 android:text="puissance"
-                android:textColor="@color/colorText" />
+                android:textColor="@color/colorText"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </TableRow>
 
     </TableLayout>
