--- a/app/src/main/res/layout/activity_factorielle.xml
+++ b/app/src/main/res/layout/activity_factorielle.xml
@@ -11,8 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:background="#1777A5"
-        android:layout_marginTop="20dp"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/gearsofpeace"
         android:gravity="center_horizontal"
         android:text="Factorielle"
         android:textColor="#04061E"
