--- a/app/src/main/res/layout/activity_puissance.xml
+++ b/app/src/main/res/layout/activity_puissance.xml
@@ -13,7 +13,7 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:background="#1777A5"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/gearsofpeace"
         android:gravity="center_horizontal"
         android:text="Puissance"
         android:textColor="#04061E"
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
+                android:fontFamily="sans-serif"
                 android:text="hello puissance"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
