--- a/app/src/main/res/layout/activity_fin_jeu3.xml
+++ b/app/src/main/res/layout/activity_fin_jeu3.xml
@@ -14,15 +14,17 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.428" />
 
     <TextView
         android:id="@+id/felicitation2"
         android:layout_width="324dp"
         android:layout_height="205dp"
-        android:layout_marginTop="100dp"
-        android:text="Félicitations!"
+        android:layout_marginTop="84dp"
+        android:text="Terminé!"
         android:textAlignment="center"
         android:textSize="48sp"
         android:textStyle="italic"
@@ -32,31 +34,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/oh_non2"
-        android:layout_width="314dp"
-        android:layout_height="192dp"
-        android:layout_marginTop="72dp"
-        android:text="Oh non!"
-        android:textAlignment="center"
-        android:textSize="34sp"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/pouce_haut2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="353dp"
+        android:layout_height="397dp"
         android:background="#00FFFFFF"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/felicitation2"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.353"
         app:srcCompat="@drawable/pouce" />
 
     <LinearLayout
@@ -96,18 +84,5 @@
             android:text="Revenir au menu"
             android:textColor="@color/colorText" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/pouce_bas3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.612"
-        app:srcCompat="@drawable/_f44e" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
